Change margin for title to 60px

--- a/CSS/site.css
+++ b/CSS/site.css
@@ -5,5 +5,5 @@
     width: 600px;
 }
 .title{
-    margin-left: 40px;
-}
+    margin-left: 60px;
+}git commit -a -m "Change background color to light blue"
